--- a/de.ostbot.plantwatch/src/de/ostbot/plantwatch/view/GrowAnlegen/JPanelBelichtung.form
+++ b/de.ostbot.plantwatch/src/de/ostbot/plantwatch/view/GrowAnlegen/JPanelBelichtung.form
@@ -33,7 +33,7 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jPanelHintergrund" max="32767" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace min="-2" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -47,23 +47,16 @@
               <Group type="102" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="jLabelLeistung" alignment="0" min="-2" max="-2" attributes="0"/>
-                      <Group type="102" alignment="0" attributes="0">
-                          <Component id="jSpinnerLeistung" min="-2" pref="56" max="-2" attributes="0"/>
-                          <EmptySpace max="-2" attributes="0"/>
-                          <Component id="jLabelWatt" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                  </Group>
-                  <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="102" alignment="0" attributes="0">
-                          <Component id="jSpinnerFlaeche" min="-2" pref="56" max="-2" attributes="0"/>
-                          <EmptySpace max="-2" attributes="0"/>
+                      <Component id="jLabelFlaeche" min="-2" max="-2" attributes="0"/>
+                      <Group type="102" attributes="0">
+                          <Component id="jSpinnerFlaeche" min="-2" pref="47" max="-2" attributes="0"/>
+                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Component id="jLabelQuadratmeter" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <Component id="jLabelFlaeche" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="15" max="32767" attributes="0"/>
+                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                  <Component id="jPanelPlatzhalter" max="32767" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -71,52 +64,56 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="1" attributes="0">
-                      <Group type="102" alignment="0" attributes="0">
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Component id="jPanelPlatzhalter" max="32767" attributes="0"/>
+                      <Group type="102" attributes="0">
                           <Component id="jLabelFlaeche" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace max="32767" attributes="0"/>
-                      </Group>
-                      <Group type="102" alignment="0" attributes="0">
-                          <Component id="jLabelLeistung" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="jSpinnerLeistung" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="jLabelWatt" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="jSpinnerFlaeche" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="jLabelQuadratmeter" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace min="0" pref="17" max="32767" attributes="0"/>
+                          <EmptySpace min="0" pref="11" max="32767" attributes="0"/>
                       </Group>
                   </Group>
+                  <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
       </Layout>
       <SubComponents>
-        <Component class="javax.swing.JLabel" name="jLabelLeistung">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="Leistung:"/>
-          </Properties>
-        </Component>
-        <Component class="javax.swing.JSpinner" name="jSpinnerLeistung">
-        </Component>
         <Component class="javax.swing.JLabel" name="jLabelQuadratmeter">
           <Properties>
-            <Property name="text" type="java.lang.String" value="m&#xb2;"/>
+            <Property name="text" type="java.lang.String" value="pro Tag"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JSpinner" name="jSpinnerFlaeche">
         </Component>
-        <Component class="javax.swing.JLabel" name="jLabelWatt">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="Watt"/>
-          </Properties>
-        </Component>
         <Component class="javax.swing.JLabel" name="jLabelFlaeche">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Fl&#xe4;che:"/>
+            <Property name="text" type="java.lang.String" value="Sonnenstunden:"/>
           </Properties>
         </Component>
+        <Container class="javax.swing.JPanel" name="jPanelPlatzhalter">
+          <Properties>
+            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="0" green="ff" red="ff" type="rgb"/>
+            </Property>
+          </Properties>
+
+          <Layout>
+            <DimensionLayout dim="0">
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <EmptySpace min="0" pref="68" max="32767" attributes="0"/>
+              </Group>
+            </DimensionLayout>
+            <DimensionLayout dim="1">
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+              </Group>
+            </DimensionLayout>
+          </Layout>
+        </Container>
       </SubComponents>
     </Container>
   </SubComponents>
