--- a/de.ostbot.plantwatch/src/de/ostbot/plantwatch/view/GrowAnlegen/JFameGrowAnlegen.form
+++ b/de.ostbot.plantwatch/src/de/ostbot/plantwatch/view/GrowAnlegen/JFameGrowAnlegen.form
@@ -55,23 +55,23 @@
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
-                          <Component id="jPanelPflanzeMitTopf1" min="-2" max="-2" attributes="0"/>
+                          <Component id="jPanelPflanzeImBoden" min="-2" max="-2" attributes="0"/>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                          <Component id="jPanelKlima1" min="-2" max="-2" attributes="0"/>
+                          <Component id="jPanelKlima" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
-                          <Component id="jPanelBelichtung1" min="-2" max="-2" attributes="0"/>
+                          <Component id="jPanelBelichtung" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
-                          <Component id="jPanelZyklus1" min="-2" max="-2" attributes="0"/>
+                          <Component id="jPanelZyklus" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
-                          <Component id="jPanelDuenger1" min="-2" max="-2" attributes="0"/>
+                          <Component id="jPanelDuenger" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
-                          <Component id="jPanelWasser1" min="-2" max="-2" attributes="0"/>
+                          <Component id="jPanelWasser" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                  <Component id="jPanelSpurenelemente1" min="-2" max="-2" attributes="0"/>
+                  <Component id="jPanelSpurenelemente" min="-2" max="-2" attributes="0"/>
                   <EmptySpace pref="13" max="32767" attributes="0"/>
               </Group>
           </Group>
@@ -81,21 +81,21 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                      <Component id="jPanelSpurenelemente1" max="32767" attributes="0"/>
+                      <Component id="jPanelSpurenelemente" max="32767" attributes="0"/>
                       <Group type="102" attributes="0">
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="jPanelKlima1" min="-2" max="-2" attributes="0"/>
-                              <Component id="jPanelPflanzeMitTopf1" min="-2" max="-2" attributes="0"/>
+                              <Component id="jPanelKlima" min="-2" max="-2" attributes="0"/>
+                              <Component id="jPanelPflanzeImBoden" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="jPanelZyklus1" min="-2" pref="95" max="-2" attributes="0"/>
-                              <Component id="jPanelBelichtung1" min="-2" max="-2" attributes="0"/>
+                              <Component id="jPanelZyklus" min="-2" pref="95" max="-2" attributes="0"/>
+                              <Component id="jPanelBelichtung" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="jPanelWasser1" min="-2" pref="136" max="-2" attributes="0"/>
-                              <Component id="jPanelDuenger1" min="-2" max="-2" attributes="0"/>
+                              <Component id="jPanelWasser" min="-2" pref="136" max="-2" attributes="0"/>
+                              <Component id="jPanelDuenger" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
@@ -105,19 +105,19 @@
         </DimensionLayout>
       </Layout>
       <SubComponents>
-        <Component class="de.ostbot.plantwatch.view.GrowAnlegen.JPanelPflanzeImBoden" name="jPanelPflanzeMitTopf1">
+        <Component class="de.ostbot.plantwatch.view.GrowAnlegen.JPanelPflanzeImBoden" name="jPanelPflanzeImBoden">
         </Component>
-        <Component class="de.ostbot.plantwatch.view.GrowAnlegen.JPanelKlima" name="jPanelKlima1">
+        <Component class="de.ostbot.plantwatch.view.GrowAnlegen.JPanelKlima" name="jPanelKlima">
         </Component>
-        <Component class="de.ostbot.plantwatch.view.GrowAnlegen.JPanelZyklus" name="jPanelZyklus1">
+        <Component class="de.ostbot.plantwatch.view.GrowAnlegen.JPanelZyklus" name="jPanelZyklus">
         </Component>
-        <Component class="de.ostbot.plantwatch.view.GrowAnlegen.JPanelWasser" name="jPanelWasser1">
+        <Component class="de.ostbot.plantwatch.view.GrowAnlegen.JPanelWasser" name="jPanelWasser">
         </Component>
-        <Component class="de.ostbot.plantwatch.view.GrowAnlegen.JPanelDuenger" name="jPanelDuenger1">
+        <Component class="de.ostbot.plantwatch.view.GrowAnlegen.JPanelDuenger" name="jPanelDuenger">
         </Component>
-        <Component class="de.ostbot.plantwatch.view.GrowAnlegen.JPanelSpurenelemente" name="jPanelSpurenelemente1">
+        <Component class="de.ostbot.plantwatch.view.GrowAnlegen.JPanelSpurenelemente" name="jPanelSpurenelemente">
         </Component>
-        <Component class="de.ostbot.plantwatch.view.GrowAnlegen.JPanelBelichtung" name="jPanelBelichtung1">
+        <Component class="de.ostbot.plantwatch.view.GrowAnlegen.JPanelBelichtung" name="jPanelBelichtung">
         </Component>
       </SubComponents>
     </Container>
